Fixed overflow/clipped content at the bottom issue

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -23,7 +23,9 @@ html, body, .global-grid {
 }
 
 .mainContent {
+    max-height: 66%;
     overflow: scroll;
+    align-self: start;
     .full-parent-height-and-width();
 }
 
